# garf

./: .gitignore  .pre-commit-config.yaml  __init__.py  pyproject.toml  readme.md  setup.py
.github/workflows/: main.yml
garf/: __init__.py  garf_apply.py  garf_detector.py  garf_model.py  garf_train.py  helpers.py  nn.py
